Name:                oeis
Version:             0.1
Stability:           experimental
Description:         Haskell interface to the Online Encyclopedia of Integer Sequences.
Synopsis:            Interface to the Online Encyclopedia of Integer Sequences
Homepage:            http://code.haskell.org/oeis
License:             BSD3
License-file:        LICENSE
Extra-source-files:  README
Author:              Brent Yorgey
Maintainer:          Brent Yorgey <byorgey@gmail.com>
Category:            Math
Build-Depends:       base,network,HTTP
Exposed-Modules:     Math.OEIS
ghc-options:         -Wall
